// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`nodos/generate/resource 1`] = `
"---

pipelines:
  browser: []

scopes:
  - path: /
    pipeline: browser
    routes:
      - root: home#index
      - resource: session"
`;

exports[`nodos/generate/resources 1`] = `
"---

pipelines:
  browser: []

scopes:
  - path: /
    pipeline: browser
    routes:
      - root: home#index
      - resources: users"
`;
